# conan-vorbis

./: .gitignore  .travis.yml  FindVORBIS.cmake  README.md  appveyor.yml  build.py  conanfile.py
test/: CMakeLists.txt  conanfile.py  main.c  main.cpp
test_package/: CMakeLists.txt  conanfile.py  main.cpp
vorbis-1.3.5/win32/VS2015/: vorbis_dynamic.VC.db
vorbis-1.3.5/win32/VS2015/libvorbis/: libvorbis_dynamic.vcxproj
vorbis-1.3.5/win32/VS2015/libvorbisfile/: libvorbisfile_dynamic.vcxproj
vorbis-1.3.5/win32/VS2015/vorbisdec/: vorbisdec_dynamic.vcxproj
vorbis-1.3.5/win32/VS2015/vorbisenc/: vorbisenc_dynamic.vcxproj
